# gws-scan-report

./: README.md  example_config.toml  pyproject.toml
scan_report/: cli.py
